added function from bg

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -12,8 +12,9 @@
             <p>Foo: {{bar}}</p>
             <p>
                 direct: {{directHello}}<br>
-                local: {{localHello}}<br>
-                bg: {{bgHello}}
+                local proxy: {{localHello}}<br>
+                bg proxy: {{bgProxyHello}}<br>
+                bg function: {{bgFunctionHello}}
             </p>
             <hr />
             First Name: <input type="text" ng-model="firstName"><br>
